--- a/alazaraqalabyadh/Content/css/style.css
+++ b/alazaraqalabyadh/Content/css/style.css
@@ -36,12 +36,12 @@
     IMPORT FILES
 -------------------------------------------------------------------*/
 
-@import url(css/animate.css);
-@import url(css/flaticon.css);
-@import url(css/icomoon.css);
-@import url(css/prettyPhoto.css);
-@import url(css/owl.carousel.css);
-@import url(css/font-awesome.min.css);
+@import url(animate.css);
+@import url(flaticon.css);
+@import url(icomoon.css);
+@import url(prettyPhoto.css);
+@import url(owl.carousel.css);
+@import url(font-awesome.min.css);
 
 /*------------------------------------------------------------------
     SKELETON
