complete home page

--- a/alazaraqalabyadh/Content/css/owl.carousel.css
+++ b/alazaraqalabyadh/Content/css/owl.carousel.css
@@ -167,7 +167,7 @@
 }
 .owl-next i,
 .owl-prev i {
-  background-color: #fcbf02;
+  background-color: #7ABDD0;
   color: #393939;
   width: 60px;
   height: 60px;
@@ -184,7 +184,7 @@
 
 .owl-next i:hover,
 .owl-prev i:hover {
-	background: #fd6802;
+	background: ##0E91BC;
 	color: #ffffff;
 }
 
