--- a/alazaraqalabyadh/Content/css/style.css
+++ b/alazaraqalabyadh/Content/css/style.css
@@ -48,14 +48,14 @@
 -------------------------------------------------------------------*/
 
 body {
-    color: #999;
-    font-size: 15px;
+    color: #333;
+    font-size: 16px;
     font-family: 'Raleway', sans-serif;
     line-height: 1.80857;
 }
 
 body.demos .section {
-    background: url(images/bg.png) repeat top center #f2f3f5;
+    background: url('/Content/images/bg.png) repeat top center #f2f3f5');
 }
 
 body.demos .section-title img {
@@ -336,7 +336,7 @@ a img.aligncenter {
 	font-size: 16px;
 }
 .email-box a:hover{
-	color: #fd6802;
+	color: #0E91BC;
 }
 .email-box a i{
 	padding: 0px 5px;
@@ -350,7 +350,7 @@ a img.aligncenter {
 	font-size: 16px;
 }
 .phone-box a:hover{
-	color: #fd6802;
+	color: #0E91BC;
 }
 .phone-box a i{
 	padding: 0px 5px;
@@ -370,7 +370,7 @@ a img.aligncenter {
 	font-size: 20px;
 }
 .social-box ul li a:hover{
-	color: #fd6802;
+	color: #0E91BC;
 }
 
 
@@ -458,7 +458,7 @@ a img.aligncenter {
 	color: #ffffff;
 	box-shadow: 0 10px 20px 0 rgba(5, 16, 44, .15);
 	border-radius: 25px 0px 25px 0px;
-	background: #fd6802;
+	background: #0E91BC;
 }
 
 .header_style_01 .navbar-default .navbar-nav > li:hover a,
@@ -466,7 +466,7 @@ a img.aligncenter {
     color: #ffffff;
 	box-shadow: 0 10px 20px 0 rgba(5, 16, 44, .15);
 	border-radius: 25px 0px 25px 0px;
-	background: #fd6802;
+	background: #0E91BC;
 }
 
 .header_style_01 .navbar-right > li {
@@ -557,7 +557,7 @@ li.social-links a {
 }
 
 .slide-text h1 span{
-	color: #fd6802;
+	color: #0E91BC;
 }
 
 .slide-text h2 {
@@ -582,7 +582,7 @@ li.social-links a {
 }
 
 .slider-wrapper .owl-nav .owl-prev:hover, .slider-wrapper .owl-nav .owl-next:hover {
-	background: #fd6802;
+	background: #0E91BC;
 }
 
 .slider-wrapper .owl-nav .owl-prev {
@@ -637,7 +637,7 @@ li.social-links a {
     background-attachment: fixed;
     background-size: cover;
     height: 100%;
-    padding: 120px 0;
+    /*padding: 120px 0;*/
     position: relative;
     width: 100%;
 }
@@ -668,7 +668,7 @@ li.social-links a {
     display: block;
     position: relative;
     overflow: hidden;
-    padding: 120px 0;
+    padding: 50px 0;
 }
 
 .noover {
@@ -744,7 +744,7 @@ li.social-links a {
 }
 
 .section-title p {
-    color: #999;
+    /*color: #999;*/
     font-weight: 400;
     font-size: 18px;
     line-height: 33px;
@@ -842,7 +842,7 @@ li.social-links a {
 .portfolio-filter ul li .btn-dark {
     box-shadow: none;
     background-color: transparent;
-    border: 2px solid #fd6802 !important;
+    border: 2px solid #0E91BC !important;
     color: #393939;
     font-weight: 500;
     font-size: 14px;
@@ -896,7 +896,7 @@ li.social-links a {
 }
 
 .da-thumbs .pitem a div i {
-    background-color: #fd6802;
+    background-color: #0E91BC;
     position: absolute;
     color: #ffffff !important;
     bottom: 0;
@@ -928,7 +928,7 @@ li.social-links a {
 }
 
 .desc h3 i {
-    color: #fd6802;
+    color: #0E91BC;
     font-size: 37px;
     vertical-align: middle;
     margin-right: 12px;
@@ -1299,9 +1299,9 @@ li.social-links a {
 
 .message-box .lead {
     padding-top: 10px;
-    font-size: 19px;
-    font-style: italic;
-    color: #999;
+    /*font-size: 19px;*/
+    /*font-style: italic;*/
+    color: #393939;
     padding-bottom: 0;
 }
 
@@ -1326,7 +1326,7 @@ li.social-links a {
 }
 
 .hoverbutton {
-    background-color: #fd6802;
+    background-color: #0E91BC;
     position: absolute;
     color: #ffffff !important;
     top: 48%;
@@ -1558,7 +1558,7 @@ hr.invis1 {
     border-radius: 25px 0px 25px 0px;
     font-size: 26px;
 	color: #ffffff;
-    background-color: #fd6802;
+    background-color: #0E91BC;
     margin: 0 auto 22px;
     position: relative;
     text-align: center;
@@ -2045,7 +2045,7 @@ select.mobile-device {
 }
 
 .footer {
-    padding: 90px 0 80px !important;
+    padding: 30px 0 80px !important;
     color: #999;
     background-color: #393939;
 }
@@ -2098,7 +2098,7 @@ select.mobile-device {
 
 .footer-links a:hover,
 .footer a:hover {
-    color: #fd6802 !important;
+    color: #0E91BC !important;
 }
 
 .footer-links li {
@@ -2134,7 +2134,7 @@ select.mobile-device {
 
 .copyrights {
     border-top: 1px dashed rgba(255, 255, 255, 0.1);
-    background-color: #1f1f1f;
+    background-color: #7ABDD0;
     box-sizing: border-box;
     width: 100%;
     text-align: left;
@@ -2175,7 +2175,7 @@ select.mobile-device {
 }
 
 .footer-distributed .footer-company-name a:hover{
-	color: #fd6802;
+	color: #0E91BC;
 }
 
 
@@ -2285,11 +2285,11 @@ select.mobile-device {
 }
 
 .dmtop:hover {
-	background-color: #fd6802;
+	background-color: #0E91BC;
 }
 
 .icon_wrap {
-    background-color: #fd6802;
+    background-color: #0E91BC;
     width: 100px;
     height: 100px;
     display: block;
@@ -2327,7 +2327,7 @@ select.mobile-device {
     right: 0;
     bottom: 0;
     left: 0;
-    background: #fd6802;
+    background: #0E91BC;
     z-index: 11000;
     position: fixed;
     display: block;
@@ -2800,9 +2800,9 @@ select.mobile-device {
 .btn-light {
     padding: 13px 40px;
     font-size: 18px;
-    border: 2px solid #fd6802;
+    border: 2px solid #0E91BC;
     color: #ffffff;
-    background-color: #fd6802;
+    background-color: #0E91BC;
 }
 
 .btn-dark {
@@ -2815,7 +2815,7 @@ select.mobile-device {
 
 .btn-light:hover,
 .btn-light:focus {
-    border-color: #fd6802;
+    border-color: #0E91BC;
     color: rgba(255, 255, 255);
 	background: #393939;
 }
@@ -2904,7 +2904,7 @@ select.mobile-device {
 	position: relative;
 }
 .banner h2::after {
-    background: #fd6802;
+    background: #0E91BC;
     content: "";
     height: 35px;
     left: -15px;
@@ -2926,7 +2926,7 @@ select.mobile-device {
 	font-weight: 500;
 }
 .page-title-link li a:hover {
-	color: #fd6802;
+	color: #0E91BC;
 }
 .page-title-link li::after {
     background: #fcbf02;
@@ -2969,7 +2969,7 @@ select.mobile-device {
 	color: #393939;
 }
 .about-text h3 a:hover{
-	color: #fd6802;
+	color: #0E91BC;
 }
 
 .about-item:hover .about-icon{
@@ -2978,7 +2978,7 @@ select.mobile-device {
 }
 
 .about-item:hover .about-icon span{
-	color: #fd6802;
+	color: #0E91BC;
 	transition: all 1s ease-in-out;
 }
 
@@ -3000,9 +3000,9 @@ select.mobile-device {
 
 
 :root{
-    --pricingTable-yellow: #fd6802;
-    --pricingTable-purple: #fd6802;
-    --pricingTable-blue: #fd6802;
+    --pricingTable-yellow: #0E91BC;
+    --pricingTable-purple: #0E91BC;
+    --pricingTable-blue: #0E91BC;
 }
 
 .pricingTable{
@@ -3323,7 +3323,7 @@ select.mobile-device {
 .address-item h3{
 	font-size: 28px;
 	font-weight: 600;
-	color: #fd6802;
+	color: #0E91BC;
 }
 
 
