--- a/alazaraqalabyadh/Views/Shared/_Layout.cshtml
+++ b/alazaraqalabyadh/Views/Shared/_Layout.cshtml
@@ -15,9 +15,8 @@
     <meta name="author" content="">
     <!-- Site Icons -->
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="~/Content/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="~/Content/img-Comany/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="~/Content/images/apple-touch-icon.png">
-    
     
     <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
 
@@ -60,7 +59,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="left-top">
                         <div class="email-box">
-                            <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> sulemanshekh@gmail.com</a>
+                            <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@alazaraqalabyadh.com</a>
                         </div>
                         <div class="phone-box">
                             <a href="tel:1234567890"><i class="fa fa-phone" aria-hidden="true"></i> +971 559 811 895</a>
@@ -116,23 +115,23 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="widget clearfix">
                             <div class="widget-title">
-                                <img src="~/Content/images/logos/logo-2.png" alt="" />
+                                <img src="~/Content/images/logos/logo 2.png" alt="" />
                             </div>
-                            <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
-                            <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
+                            <p> Al Azaraq Al Abyadh is based in Sharjah (UAE). The company’s principal areas of business interests include Aluminum Glass Door Windows, Shower Door, Manual and Automatic Doors, Sliding and Hinged Windows and Doors, Glass Partition, Double Glazing Glass etc…</p>
+                       
                         </div><!-- end clearfix -->
                     </div><!-- end col -->
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="widget clearfix">
                             <div class="widget-title">
-                                <h3>Pages</h3>
+                                <h3>Quick Navigation</h3>
                             </div>
                             <ul class="footer-links hov">
                                 <li><a href="#">Home <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">Blog <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">Pricing <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">About <span class="icon icon-arrow-right2"></span></a></li>
-                                <li><a href="#">Faq <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">About Us <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">Our Services <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">Portfolio <span class="icon icon-arrow-right2"></span></a></li>
+                                <li><a href="#">Projects <span class="icon icon-arrow-right2"></span></a></li>
                                 <li><a href="#">Contact <span class="icon icon-arrow-right2"></span></a></li>
                             </ul><!-- end links -->
                         </div><!-- end clearfix -->
@@ -141,8 +140,12 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="footer-distributed widget clearfix">
                             <div class="widget-title">
-                                <h3>Subscribe</h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which one know this tricks.</p>
+                                <h3>Contact Details</h3>
+                                <p>Industrial Area 15 Sharjah (UAE)<br />
+                                Phone: +971 559 811 895 <br />
+                                Whtatsapp: +971 559 811 895<br />
+                                Email: sulemanshekh@gmail.com</p>
+
                             </div>
 
                             <div class="footer-right">
@@ -161,8 +164,8 @@
                 <div class="footer-distributed">
                     <div class="footer-left">
                         <p class="footer-company-name">
-                            All Rights Reserved. &copy; 2018 <a href="#">GoodWEB</a> Design By :
-                            <a href="https://html.design/">html design</a>
+                            All Rights Reserved. &copy; 2015 <a href="#">AlAzaraqAlAbyadh</a> Design By :
+                            <a href="#">Shahnawaz Ali</a>
                         </p>
                     </div>
 
