--- a/alazaraqalabyadh/Views/Home/Index.cshtml
+++ b/alazaraqalabyadh/Views/Home/Index.cshtml
@@ -51,6 +51,22 @@
                 </div>
             </div>
         </div>
+        <div class="slider-item home-one-slider-otem slider-item-four slider-bg-four">
+            <div class="container">
+                <div class="row">
+                    <div class="slider-content-area">
+                        <div class="slide-text">
+                            <h1 class="homepage-three-title">Welcom to <span>Al Azaraq</span> Al Abyadh</h1>
+                            <h2>As one of the leading suppliers in the specialist field of, <br>Double Glazing and Aoutomatic window.</h2>
+                            <div class="slider-content-btn">
+                                <a class="button btn btn-light btn-radius btn-brd" href="#">Read More</a>
+                                <a class="button btn btn-light btn-radius btn-brd" href="#">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div id="about" class="section wb">
@@ -67,7 +83,7 @@
             </div><!-- end col -->
             <div class="col-md-6">
                 <div class="post-media wow fadeIn">
-                    <img src="~/Content/uploads/about_01.jpg" alt="" class="img-responsive img-rounded">
+                    <img src="~/Content/img-Comany/about-us.jpg" alt="" class="img-responsive img-rounded">
                     @*<a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>*@
                 </div><!-- end media -->
             </div><!-- end col -->
